WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277253
[UnifiedPDF] UnifiedPDFPlugin::checkedKeyboardScrollingAnimator() is not needed
https://bugs.webkit.org/show_bug.cgi?id=277253
Summary
[UnifiedPDF] UnifiedPDFPlugin::checkedKeyboardScrollingAnimator() is not needed
Abrar Rahman Protyasha
Reported
2024-07-29 02:05:17 PDT
It's better housed in `PDFScrollingPresentationController`.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-29 02:05:27 PDT
<
rdar://problem/132708724
>
Abrar Rahman Protyasha
Comment 2
2024-07-29 02:08:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31382
EWS
Comment 3
2024-07-29 11:23:16 PDT
Committed
281513@main
(ef5dfdc1bd8b): <
https://commits.webkit.org/281513@main
> Reviewed commits have been landed. Closing PR #31382 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug