[UnifiedPDF] UnifiedPDFPlugin::checkedKeyboardScrollingAnimator() is not needed https://bugs.webkit.org/show_bug.cgi?id=277253 rdar://132708724

Reviewed by Aditya Keerthi.

This method is already available on PDFScrollingPresentationController,
which is a better scope anyway since it only gets used internal to said
class.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::checkedKeyboardScrollingAnimator const): Deleted.

Canonical link: https://commits.webkit.org/281513@main